Implemented functionality for font family, size, bold, italic and underline

--- a/src/main/java/com/wysiwyg/HomePage.html
+++ b/src/main/java/com/wysiwyg/HomePage.html
@@ -5,31 +5,33 @@
     <title></title>
 </head>
 <body>
-<table>
-    <tr>
-        <td>
-            <select wicket:id="font">
-                <option>Font</option>
-            </select>
-        </td>
-        <td>
-            <select wicket:id="size">
-                <option>Size</option>
-            </select>
-        </td>
-        <td>
-            <input wicket:id="boldButton" type="submit" value="B">
-        </td>
-        <td>
-            <input wicket:id="italicButton" type="submit" value="I">
-        </td>
-        <td>
-            <input wicket:id="underlineButton" type="button" value="U">
-        </td>
-    </tr>
-    <tr>
-        <textarea wicket:id="uiText" rows="10" cols="100"></textarea>
-    </tr>
-</table>
+<form wicket:id="form">
+    <table>
+        <tr>
+            <td>
+                <select wicket:id="font">
+                    <option>Font</option>
+                </select>
+            </td>
+            <td>
+                <select wicket:id="size">
+                    <option>Size</option>
+                </select>
+            </td>
+            <td>
+                <input wicket:id="boldButton" type="submit" value="B">
+            </td>
+            <td>
+                <input wicket:id="italicButton" type="submit" value="I">
+            </td>
+            <td>
+                <input wicket:id="underlineButton" type="submit" value="U">
+            </td>
+        </tr>
+        <tr>
+            <textarea wicket:id="uiText" rows="10" cols="100"></textarea>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
