Added alignment functionality; Added icons - not used yet; Added default values; Fixed: NPE for deleting everything in textarea

--- a/src/main/java/com/wysiwyg/HomePage.html
+++ b/src/main/java/com/wysiwyg/HomePage.html
@@ -27,9 +27,18 @@
             <td>
                 <input wicket:id="underlineButton" type="submit" value="U">
             </td>
+            <td>
+                <input wicket:id="alignLeftButton" type="submit" value="Left">
+            </td>
+            <td>
+                <input wicket:id="alignCenterButton" type="submit" value="Center">
+            </td>
+            <td>
+                <input wicket:id="alignJustifyButton" type="submit" value="Justify">
+            </td>
         </tr>
         <tr>
-            <textarea wicket:id="uiText" rows="10" cols="100"></textarea>
+            <textarea wicket:id="uiText" style="width: 750px; height: 300px;"></textarea>
         </tr>
     </table>
 </form>
