Added liquibase plugin in order to create tables into the database; Added dao and service for the new table & fix all configuration issues in order to be a functional wicket+spring+hibernate app

--- a/src/main/java/com/wysiwyg/HomePage.html
+++ b/src/main/java/com/wysiwyg/HomePage.html
@@ -38,6 +38,11 @@
             </td>
         </tr>
         <tr>
+            <td>
+                <input wicket:id="saveDBButton" type="submit" value="SAVE">
+            </td>
+        </tr>
+        <tr>
             <textarea wicket:id="uiText" style="width: 750px; height: 300px;"></textarea>
         </tr>
     </table>
