--- a/src/main/java/com/wysiwyg/HomePage.html
+++ b/src/main/java/com/wysiwyg/HomePage.html
@@ -39,7 +39,13 @@
         </tr>
         <tr>
             <td>
-                <input wicket:id="saveDBButton" type="submit" value="SAVE">
+                <input wicket:id="saveDBButton" type="submit" value="SAVE to DB">
+            </td>
+            <td>
+                <input wicket:id="name" type="text" size="50"/>
+            </td>
+            <td>
+                <input wicket:id="loadDBButton" type="submit" value="LOAD from DB">
             </td>
         </tr>
         <tr>
